<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/flContainer"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <android.support.v4.app.FragmentTabHost
        android:visibility="gone"
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RadioGroup
        android:background="@drawable/bg_lineframe_top"
        android:orientation="horizontal"
        android:id="@+id/rgTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbHome"
            android:textSize="@dimen/txt_m"
            android:textColor="@drawable/bg_home_text_selector"
            android:checked="true"
            android:drawablePadding="@dimen/space_xs"
            android:gravity="center"
            android:drawableTop="@drawable/bg_tabbar_home_selector"
            android:text="@string/lbl_home"
            android:button="@null"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:textSize="@dimen/txt_m"
            android:id="@+id/rbMessage"
            android:textColor="@drawable/bg_home_text_selector"
            android:drawablePadding="@dimen/space_xs"
            android:gravity="center"
            android:drawableTop="@drawable/bg_tabbar_message_selector"
            android:text="@string/lbl_message"
            android:layout_weight="1"
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rbProfile"
            android:textSize="@dimen/txt_m"
            android:textColor="@drawable/bg_home_text_selector"
            android:drawablePadding="@dimen/space_xs"
            android:drawableTop="@drawable/bg_tabbar_profile_selector"
            android:gravity="center"
            android:text="@string/lbl_profile"
            android:layout_weight="1"
            android:button="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</LinearLayout>