<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:padding="@dimen/space_s">

        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:src="@mipmap/ic_messages_at"/>

        <TextView
            style="@style/tv_m_black_sl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="@dimen/space_m"
            android:text="@string/at_me"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_arrow_right"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:padding="@dimen/space_s">

        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:src="@mipmap/ic_messages_comments"/>

        <TextView
            style="@style/tv_m_black_sl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="@dimen/space_m"
            android:text="@string/lbl_comment"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_arrow_right"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lineframe_bottom_selector"
        android:padding="@dimen/space_s">

        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:src="@mipmap/ic_messages_good"/>

        <TextView
            style="@style/tv_m_black_sl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="@dimen/space_m"
            android:text="@string/lbl_like"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_arrow_right"/>
    </LinearLayout>
</LinearLayout>